@@ -1,7 +1,5 @@
 package com.champsoft.healthcaremilestone.modules.appointment.infrastructure.persistance;
 
-
-
 import com.champsoft.healthcaremilestone.modules.appointment.application.port.out.AppointmentRepositoryPort;
 import com.champsoft.healthcaremilestone.modules.appointment.domain.model.*;
 import org.springframework.stereotype.Repository;
@@ -10,6 +8,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Repository
 public class JpaAppointmentRepositoryAdapter implements AppointmentRepositoryPort {
@@ -36,36 +35,59 @@ public class JpaAppointmentRepositoryAdapter implements AppointmentRepositoryPor
         return repo.findAll()
                 .stream()
                 .map(this::toDomain)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public void deleteById(UUID id) {
         repo.deleteById(id);
     }
-    public boolean existsOverlapping(UUID doctorId, LocalDateTime start, LocalDateTime end) {
-        return repo.existsOverlappingAppointment(doctorId, start, end);
+
+    @Override
+    public boolean existsById(UUID id) {
+        return repo.existsById(id);
     }
 
+    @Override
+    public boolean existsOverlapping(UUID doctorId, LocalDateTime start, LocalDateTime end) {
+        return repo.existsOverlapping(doctorId, start, end);
+    }
+
+    @Override
+    public boolean existsOverlappingExcludingId(UUID id, UUID doctorId, LocalDateTime start, LocalDateTime end) {
+        return repo.existsOverlappingExcludingId(id, doctorId, start, end);
+    }
+
+    // 🔁 DOMAIN → ENTITY
     private AppointmentJpaEntity toEntity(Appointment a) {
         AppointmentJpaEntity e = new AppointmentJpaEntity();
 
         e.setId(a.getId().value());
         e.setPatientId(a.getPatientId());
         e.setDoctorId(a.getDoctorId());
-        e.setStartTime(a.getTimeSlot().getStart());
-        e.setEndTime(a.getTimeSlot().getEnd());
+        e.setStartTime(a.getTimeSlot().start());
+        e.setEndTime(a.getTimeSlot().end());
         e.setStatus(a.getStatus().name());
 
         return e;
     }
 
+    // 🔁 ENTITY → DOMAIN
     private Appointment toDomain(AppointmentJpaEntity e) {
-        return new Appointment(
+        Appointment a = new Appointment(
                 new AppointmentId(e.getId()),
                 e.getPatientId(),
                 e.getDoctorId(),
                 new TimeSlot(e.getStartTime(), e.getEndTime())
         );
+
+        // restore status
+        if (e.getStatus() != null) {
+            if (e.getStatus().equals("CANCELLED")) {
+                a.cancel();
+            }
+        }
+
+        return a;
     }
 }
